changed build to be able to create native apps